--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-loader-spinner": "^3.1.4",
+    "react-notifications-component": "^2.2.3",
     "react-scripts": "3.2.0"
   },
   "scripts": {
